tetrate/tis1108/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-jwt-claim-routing-chainsaw
spec:
  steps:
    - name: apply-rbac-policy
      try:
        - apply:
            file: rbac-policy.yaml

    - name: apply-validate-jwt-claim-routing-policy
      try:
        - apply:
            file: ../validate-jwt-claim-routing.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: resource.yaml

    - name: apply-requestauthentication
      try:
        - apply:
            file: requestauthentication.yaml

    - name: apply-good-deployment
      try:
        - apply:
            file: resource.yaml
